add aps elements
